html markup complete

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   </head>
   <body>
     <div class="mainBox">
-      <h1 class="counter">Countdown</h1>
-      <h2 class="counter">1000</h2>
-      <h2 class="counter">900</h2>
-      <h2 class="counter">800</h2>
-      <h2 class="counter">700</h2>
-      <h2 class="counter">600</h2>
-      <h2 class="counter">500</h2>
-      <h2 class="counter">400</h2>
+      <h1 class="heading">Countdown</h1>
+      <div class="box">
+        <h2 class="counter">1000</h2>
+        <h2 class="counter">900</h2>
+        <h2 class="counter">800</h2>
+        <h2 class="counter">700</h2>
+        <h2 class="counter">600</h2>
+        <h2 class="counter">500</h2>
+        <h2 class="counter">400</h2>
+      </div>
+      <button class="btn">Relod</button>
     </div>
 
     <script src="main.js"></script>
